--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ Flask==3.0.0
 gunicorn==21.2.0
 requests==2.32.3
 reportlab==4.2.0
+SQLAlchemy==2.0.35
+psycopg2-binary==2.9.9
+Flask-Migrate==4.0.7
+Flask-Admin==1.6.1
